--- a/Organisation.tex
+++ b/Organisation.tex
@@ -27,7 +27,7 @@ the previous editions of the MPM4CPS Workshop.
 
 \medskip
 \noindent
-\textbf{Joeri Exelmans} 
+\textbf{Joeri Exelmans} is a Ph.D. student at the University of Antwerp, Belgium, and has worked on a Flanders Make project aiming to facilitate collaboration in complex engineering workflows. His research interests are the engineering of hybrid modeling languages, model versioning, and inconsistency management and traceability in complex engineering workflows.
 
 \medskip
 \noindent
