Last changes from OL

--- a/Organisation.tex
+++ b/Organisation.tex
@@ -31,7 +31,7 @@ the previous editions of the MPM4CPS Workshop.
 
 \medskip
 \noindent
-\textbf{Randy Paredis} 
+\textbf{Randy Paredis} is a Ph.D. student at the University of Antwerp, Belgium, and is exploring architectures and frameworks for model-based design of Digital Twins within the context of Industry 4.0. His research interests are multi-paradigm modelling, using DEVS as a common denominator for discrete-event modelling languages, and co-simulation.
 
 
 \medskip
