Added a few details

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -6,7 +6,7 @@ The \textbf{URL} is already available and will be completed when new information
 becomes available.
 
 \noindent
-\url{http://msdl.uantwerpen.be/conferences/MPM4CPS/2022}
+\url{\texttt{http://msdl.uantwerpen.be/conferences/MPM4CPS/2022}}
 
 \newpage
 \includepdf{cfp/MPM4CPS22-CfP.pdf}
