--- a/Format.tex
+++ b/Format.tex
@@ -8,7 +8,7 @@
    Full research papers will be reviewed using standard scientific criteria: alignment 
    with the workshop topic(s), novelty, evaluation, and ability to generate discussion.
    Short papers will be evaluated based on their likelihood to spark lively 
-   discussions at the workshop.
+   discussions.
 
    \item[Intended Workshop Format] In the ideal case of a full day workshop, we 
    will host two keynotes, ideally one from academia and the other from industry
@@ -22,7 +22,9 @@
    around identifiable patterns, common practices, popular formalisms/languages/tools, etc. 
    The workshop will end with a wrap-up discussion to formulate the workshop's 
    conclusion, identify open challenges, and outline future work.
-   A summarizing publication will be included in the proceedings.
+   A summarizing publication will be included in the proceedings. 
+   Depending on the quality of papers/discussions, we may organise a Special Issue
+   based on invitations (this/previous edition(s)) and open call.
    
    \item[(Expected) Participants Number] 25-35 (similar to previous editions.)
    
