--- a/MPM4CPS'22.tex
+++ b/MPM4CPS'22.tex
@@ -1,6 +1,8 @@
 \documentclass[runningheads]{llncs}
 
 \usepackage{pdfpages}
+\pdfminorversion=7
+\usepackage{marvosym}
 \usepackage[inline]{enumitem}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
@@ -25,7 +27,7 @@
 
 \vspace{-1cm}
 \author{
-   Moussa Amrani\inst{1} \and
+   Moussa Amrani\inst{1}$^{,\textrm{\Letter}}$ \and
    Dominique Blouin\inst{2} \and
    Moharram Challenger\inst{3} \and
    Joeri Exelmans\inst{3} \and
@@ -34,10 +36,10 @@
 }
 
 \institute{
-   University of Namur / NaDI, Belgium \and
-   T\'el\'ecom Paris, Institut Polytechnique de Paris, France \and
-   University of Antwerp - Flanders Make, Belgium \and
-   Karlsruhe Institute of Technology, Germany
+   University of Namur / NaDI, Belgium, \email{Moussa.Amrani@unamur.be} \and
+   T\'el\'ecom Paris, Institut Polytechnique de Paris, France, \email{Dominique.Blouin@telecom-paristech.fr} \and
+   University of Antwerp - Flanders Make, Belgium,\\ \email{\{ Randy.Paredis, Joeri.Exelmans \} @uantwerpen.be}\and
+   Karlsruhe Institute of Technology, Germany, \email{Robert.Heinrich@kit.edu}
 }
 
 %\author{Dominique Blouin}
