Last OL changes

--- a/Motivation.tex
+++ b/Motivation.tex
@@ -27,7 +27,8 @@ several disciplines together in a consistent way.
 The inherent complexity of CPS is broken down into different levels of 
 abstraction and views, each expressed in appropriate modeling formalisms.
 MPM offers processes and tools that can integrate the views, abstractions and 
-components that make up a CPS.\\
+components that make up a CPS.
+
 MPM encompasses many research topics: from language engineering (for DSLs, 
 including their (visual) syntax and semantics), to processes to support multi-view 
 and multi-abstraction modelling, simulation for full-system analysis, and deployment.
