--- a/Organisation.tex
+++ b/Organisation.tex
@@ -23,7 +23,7 @@ the previous editions of the MPM4CPS Workshop.
 
 \medskip
 \noindent
-\textbf{Moharram Challenger} is a research professor at the University of Antwerp, Belgium. He was the CTO of a software company involved-in/leading several national or international software intensive projects. He has served as an organisation committee member for SummerSim'20, ICSMM'20, AnnSim'21, IWCPS@FedCSIS'21, and AMSC'21. Also, he played the role of co-chair for several workshops organised in MoDELS and STAF 2020-21 (MDE-Intelligence, MPM4CPS, MDE4IoT, SERP4IoT, SEDES, MESS, EMAS, etc.)
+\textbf{Moharram Challenger} is a research professor at the University of Antwerp, Belgium. He was the CTO of a software company involved-in/leading several national and international software intensive projects. He has served as an organisation committee member for SummerSim'20, ICSMM'20, AnnSim'21, IWCPS@FedCSIS'21, and AMSC'21. Also, he played the role of co-chair for several workshops organised in MoDELS and STAF 2020-21 (MDE-Intelligence, MPM4CPS, MDE4IoT, SERP4IoT, SEDES, MESS, EMAS, etc.).
 
 \medskip
 \noindent
