Small modifications after HV's comments

--- a/Motivation.tex
+++ b/Motivation.tex
@@ -79,7 +79,7 @@ The intended audience includes researchers as well as practitioners who are
 interested in MPM techniques in the context of CPS development.
 We expect to attract many attendees of earlier MPM-related events, those who 
 contributed to the COST action, as well as a broader audience.
-This encompasses researchers that work on the fundamentals of language 
+This includes researchers that work on the fundamentals of language 
 engineering, (visual) modelling environment construction, (co-)simulation 
 techniques, as well as tool builders and users of these tools.
 
